[package]
name = "midenc-session"
description = "Session management for the Midenc compiler"
version = "0.0.2"
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
categories.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
edition.workspace = true

[features]
default = []
serde = ["dep:serde", "dep:serde_repr", "midenc-hir-symbol/serde"]

[dependencies]
atty = "0.2"
clap.workspace = true
inventory.workspace = true
miden-assembly.workspace = true
miden-core.workspace = true
miden-stdlib.workspace = true
miden-diagnostics.workspace = true
midenc-hir-symbol.workspace = true
midenc-hir-macros.workspace = true
miden-base-sys = { version = "0.0.1", path = "../sdk/base-sys", features = [
    "masl-lib",
] }
thiserror.workspace = true
serde = { workspace = true, optional = true }
serde_repr = { workspace = true, optional = true }
