[package]
name = "midenc-session"
description = "Session management for the Midenc compiler"
version.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
categories.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
edition.workspace = true

[features]
default = ["std"]
std = ["dep:termcolor", "dep:parking_lot", "dep:clap"]
serde = ["dep:serde", "dep:serde_repr", "midenc-hir-symbol/serde"]

[dependencies]
clap = { workspace = true, optional = true }
inventory.workspace = true
log.workspace = true
miden-assembly.workspace = true
miden-core.workspace = true
miden-stdlib.workspace = true
midenc-hir-symbol.workspace = true
midenc-hir-macros.workspace = true
miden-base-sys = { version = "0.0.7", path = "../sdk/base-sys", features = [
    "masl-lib",
] }
parking_lot = { workspace = true, optional = true }
termcolor = { version = "1.4.1", optional = true }
thiserror.workspace = true
serde = { workspace = true, optional = true }
serde_repr = { workspace = true, optional = true }
