[package]
name = "midenc"
description = "The compiler frontend/executable for Miden"
version = "0.0.0"
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
categories.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
env_logger.workspace = true
human-panic = "2.0"
midenc-driver.workspace = true
