[package]
name = "miden-codegen-masm"
version.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
cranelift-entity.workspace = true
intrusive-collections.workspace = true
miden-assembly.workspace = true
miden-diagnostics.workspace = true
miden-hir.workspace = true
miden-hir-analysis.workspace = true
miden-hir-transform.workspace = true
midenc-session.workspace = true
paste.workspace = true
rustc-hash.workspace = true
smallvec.workspace = true
