[package]
name = "midenc-codegen-masm"
version.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
cranelift-entity.workspace = true
intrusive-collections.workspace = true
inventory.workspace = true
log.workspace = true
miden-assembly.workspace = true
miden-core.workspace = true
miden-diagnostics.workspace = true
midenc-hir.workspace = true
midenc-hir-analysis.workspace = true
midenc-hir-transform.workspace = true
midenc-session.workspace = true
paste.workspace = true
petgraph.workspace = true
rustc-hash.workspace = true
smallvec.workspace = true
thiserror.workspace = true

[dev-dependencies]
proptest.workspace = true
env_logger.workspace = true
