[package]
name = "midenc-codegen-masm"
description = "Miden Assembly backend for the Miden compiler"
version = "0.0.4"
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
edition.workspace = true

[features]
default = ["std"]
std = ["bitcode/std"]

[dependencies]
anyhow.workspace = true
bitcode.workspace = true
cranelift-entity.workspace = true
intrusive-collections.workspace = true
inventory.workspace = true
log.workspace = true
miden-assembly.workspace = true
miden-core.workspace = true
miden-processor.workspace = true
miden-stdlib.workspace = true
midenc-hir = { workspace = true, features = ["serde"] }
midenc-hir-analysis.workspace = true
midenc-hir-transform.workspace = true
midenc-session = { workspace = true, features = ["serde"] }
paste.workspace = true
petgraph.workspace = true
rustc-hash.workspace = true
serde.workspace = true
serde_bytes.workspace = true
smallvec.workspace = true
thiserror.workspace = true

[dev-dependencies]
proptest.workspace = true
env_logger.workspace = true
