[package]
name = "miden-sdk-alloc"
description = "A simple bump allocator for Miden SDK programs"
version = "0.0.2"
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
edition.workspace = true

[lib]
crate-type = ["rlib"]

[dependencies]
