[package]
name = "miden-base-sys"
description = "Miden rollup Rust bingings and MASM library"
version.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
categories.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
edition.workspace = true

[dependencies]
miden-assembly.workspace = true
miden-stdlib-sys = { version = "0.0.6", path = "../stdlib-sys", optional = true }

[build-dependencies]
miden-assembly.workspace = true

[features]
default = []

# User facing Rust bindings
"bindings" = ["dep:miden-stdlib-sys"]
# MASL library for Miden rollup (tx kernel, etc.) used by the compiler in the link phase
"masl-lib" = []
