[package]
name = "miden-prelude"
description = "Miden Prelude: intrinsics and standard library for Miden"
version.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
edition.workspace = true

[lib]
crate-type = ["rlib"]

[dependencies]
wee_alloc = { version = "0.4.5", default-features = false}